fix button height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ body {
     color: #fff;
     display: inline;
     font-weight: bold;
-    height: 40px;
+    height: 41px;
     letter-spacing: 1px;
     padding: 5px 0;
     width: 20%;
@@ -209,6 +209,10 @@ input[type="submit"] {
         display: block;
         width: 40%;
         min-width: 395px;
+    }
+
+    .submit-button {
+        height: 40px;
     }
 
 /* ============
